# FreeRTOS-CMake

./: CMakeLists.txt  FreeRTOSConfig.h  LICENSE  readme.md
cmake/: CMakeLists.txt
src/: CMakeLists.txt
